# picoX7

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md
.github/workflows/: build.yml
Demo/: PLAYER.py  PROG_SWEEP.py
Demo/MIDI/: Const.py  File.py  Out.py  __init__.py
Research/: DX7_v1_8.h  Makefile  PATCH_LOAD_DATA.drawio  Table_dx7_rom_1.cpp  Table_dx7_rom_1.h  YM21290 EGS.drawio  exp_dx7.cpp
Schematic/: picoX7.kicad_pcb  picoX7.kicad_prl  picoX7.kicad_pro  picoX7.kicad_sch
Source/: CLOCK_FREQ.py  CMakeLists.txt  Controller.h  FilePortal.h  PicoX7USBDevice.h  Synth.h  SynthBase.h  SynthIO.h  SynthVoice.h  SynthVoiceSysEx.h  Usage.h  VoiceBase.h  picoX7.cpp  picoX7_native.cpp  picoX7_rpipico.cpp  picosynth.cpp  picosynth_mbedLPC1768.cpp  picosynth_native.cpp  picosynth_rpipico.cpp
Source/DX7/: AUTO.py  CMakeLists.txt  DX7Synth.h  DX7Voice.h  Egs.h  EgsOpState.h  EgsOps.h  Egs_EnvGen.h  EnvGen.h  FREQ.py  Firmware.h  Lfo.h  Modulation.h  Ops.h  OpsAlg.h  OpsAlg6.h  OpsBase.h  PitchEg.h  Synth.h  SysEx.cpp  SysEx.h  Table_dx7_rom.py  Table_dx7_rom_2.py  Table_dx_exp_14.py  Table_dx_exp_19.py  Table_dx_exp_32.py  Table_dx_log_sine_14.py  Voice.h
Source/DX7/cart/: LICENSE
Source/DX7/test/: CMakeLists.txt  testEgs.cpp  testEgsOpState.cpp  testEnvGen.cpp  testMain.cpp  testOps.cpp  testPitchEg.cpp
Source/SYN/: AUTO.py  CMakeLists.txt  Freq.h  Gain.h  Oscillator.h  Phase.h  Sample.h  Sine.h  SynthBase.h  Table_sine.cpp  Table_sine.h  VoiceBase.h
Source/Simple/: Synth.h  Voice.h
Source/auto/: CxxFile.py  Table.py
Source/hw/: Adc.h  Audio.h  CMakeLists.txt  Config.h  Lcd.h  Led.h  Led7Seg.h  MidiIn.h  MidiUsbDevice.h  PhysMidi.h  Usb.h  hw.h
Source/hw/Test/: CMakeLists.txt  Table_sine.py  fault_handler.cpp  test_hw.cpp
Test/: CMakeLists.txt  MidiOut.py  PLAYER.py  PROG_SWEEP.py  Timer.py  test_egs.cpp
Test/MIDI/: Const.py  File.py  Out.py  __init__.py
build_rpipico/Source/: picoX7_WAVESHARE_GPIO_LCD.elf.dis
dedicated_hw/: audio_out.kicad_sch  fp-info-cache  fp-lib-table  io_pwr.kicad_sch  picoX7.bak  picoX7.kicad_pcb  picoX7.kicad_prl  picoX7.kicad_pro  picoX7.kicad_sch  picoX7.kicad_sym  picoX70.1.1a.kicad_pcb  picoX70.1.1a.kicad_prl  picoX70.1.1a.kicad_pro  picoX7_0.1.0a.kicad_pcb  rp2350.kicad_sch  sym-lib-table  ui.kicad_sch  usb.kicad_sch
dedicated_hw/Ibom_ver_a/: ibom.html
dedicated_hw/PCB_fabrication/: README.md
dedicated_hw/PCB_fabrication/0.1.0a_jlc_assembly_files/: bom.csv  positions_hand_tuned.csv
dedicated_hw/PCB_fabrication/0.1.0b_jlc_assembly_files/: positions_hand_tuned.csv
dedicated_hw/ibom_ver_b/: ibom.html
dedicated_hw/picoX7.pretty/: DIN5-180.kicad_mod  PJ-320.kicad_mod  RP2350-QFN-60-1EP_7x7_P0.4mm_EP3.4x3.4mm_ThermalVias.kicad_mod  TF-01A.step  TF01A.kicad_mod
docs/: .gitignore  DX7_v1_8.h  Makefile  exp_dx7.cpp
docs/Research/: CMakeLists.txt  DX7_v1_8.h  HANDLER_OCF.drawio  PATCH_ACTIVATE.drawio  YM21290 EGS.drawio  exp_dx7.cpp
docs/Schematic/: picoX7.kicad_pro  picoX7.kicad_sch
docs/Schematics/WAVESHARE_REV2_1/: picoX7_WAVESHARE_REV2_1.kicad_prl  picoX7_WAVESHARE_REV2_1.kicad_pro  picoX7_WAVESHARE_REV2_1.kicad_sch
docs/picoX7 Project/: picoX7.als
